<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AcmeAmazon</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="provider_label">AA Provider Label</string>
    
    <!-- Main Page -->
    <string name="bt_add">Add</string>
    <string name="bt_summary">Summary</string>
    <string name="bt_amazon">Amazon</string>
    
    <!-- Item Page -->
    <string name="tv_order_detail">YOUR ORDER DETAIL</string>
    
    <!-- List View -->
    <string name="tv_date">Date</string>
    <string name="tv_title">title</string>
    <string name="tv_total">Prime Cost</string>
    <string name="tv_bv">BV </string>
    <string name="tv_cost">Cost</string>
    <string name="tv_item_quantity">Quanatity</string>
    <string name="tv_item_cost">Prime Cost</string>
    
    <!-- Add New Order -->
    <string name="tv_add_order">Submit New Order</string>
    <string name="bt_submit">Submit</string>
    <string name="bt_add_item">Add Item</string>
    <string name="ed_item_name">Product Name</string>
    <string name="ed_item_quantity">Quantity</string>
    <string name="ed_item_cost">Item Prime Cost</string>
    <string name="ed_item_bv">BV Point</string>
    
    <!-- Date pick dialog -->
    <string name="dialog_summary">Please enter the order date. Show today by default!</string>
    <string name="dialog_submit">Submit</string>
    
    <!-- Summary Report -->
    <string name="tv_summary">Summary</string>
    <string name="tv_summary_total">Total Report</string>
    <string name="tv_item_summary_total">Order Total Report</string>
    
    <!-- Toast Message -->
    <string name="no_item_info">Please entre products name, quanatity and prime cost!</string>
    <string name="number_item_quanatity">Please entre numbers for quanatity!</string>
    <string name="number_item_cost">Please entre numbers for cost!</string>
    
    <!-- Settings -->
    <string name="edit_product_list">Edit Product List</string>
    <string name="bt_setting_add">ADD</string>
    <string name="bt_setting_edit">EDIT</string>
    <string name="bt_setting_hint">Enter Product Name</string>
    
    <!-- Product detail page -->
    <string name="tv_real_price">Base:</string>
    <string name="tv_amazon_min">Amazon Min:</string>
    <string name="tv_sale_price">Sale Price:</string>
    <string name="tv_profit">Profit:</string>
    <string name="bt_add_prodcut">Add New Product</string>
    <string name="tv_prod_title">Name</string>
    <string name="tb_tr_1_1">Shop.com Price:</string>
    <string name="tb_tr_1_3">Base Price:</string>
    <string name="tb_tr_2_1">BV Point:</string>
    <string name="tb_tr_2_3">BV To Dollar:</string>
    <string name="tb_tr_3_1">FBA Pre Fee:</string>
    <string name="tb_tr_3_3">FBA Shipping Fee:</string>
    <string name="tb_tr_4_1">FBA Sale Fee:</string>
    <string name="tb_tr_4_3">Amazon Base Price:</string>
    <string name="tb_tr_5_1">Amazon Base with Exta:</string>
    <string name="tb_tr_5_3">Amazon Sale Price:</string>
    <string name="tb_tr_6_1">Profit:</string>
    
    <!-- Product inventor -->
    <string name="product_receive">FBA shipping received List</string>
    <string name="product_list">Product Info List</string>
    
    <!-- FBA Strings -->
    <string name="add_fba_shipment">Add FBA Shipping</string>
</resources>
