<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.acme.amazon.orderrecord.AAMainOrderListPage" >

    <LinearLayout
        android:id="@+id/button_ly"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="horizontal"
        android:weightSum="3" >

        <Button
            android:id="@+id/bt_add"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/bt_add" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#6F737F" />

        <Button
            android:id="@+id/bt_summary"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/bt_summary" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#6F737F" />

        <Button
            android:id="@+id/bt_amazon"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/bt_amazon" />
    </LinearLayout>

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/button_ly"
        android:background="#6F737F" />

    <ExpandableListView
        android:id="@+id/listView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_ly"
        android:layout_alignStart="@+id/button_ly"
        android:layout_below="@+id/button_ly"
        android:layout_margin="@dimen/list_margin" >
    </ExpandableListView>

</RelativeLayout>