<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/activity_vertical_margin"
    android:layout_marginRight="@dimen/activity_vertical_margin" >

    <RelativeLayout
        android:id="@+id/ly_edit_product"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" >

        <EditText
            android:id="@+id/ed_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/bt_add"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_toLeftOf="@+id/bt_add"
            android:layout_toStartOf="@+id/bt_add"
            android:hint="@string/bt_setting_hint" >
        </EditText>

        <Button
            android:id="@+id/bt_add"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/bt_setting_add" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="#6F737F" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/ly_show_product"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" >

        <TextView
            android:id="@+id/tv_product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/bt_edit"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:layout_toLeftOf="@+id/bt_edit"
            android:layout_toStartOf="@+id/bt_edit"
            android:maxLines="3" />

        <Button
            android:id="@+id/bt_edit"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/bt_setting_edit" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="#6F737F" />
    </RelativeLayout>

</FrameLayout>