<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TableLayout
        android:id="@+id/tl_prod_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:shrinkColumns="0,2" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/table_padding" >

            <TextView
                android:id="@+id/tr_1_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/tb_tr_1_1" />

            <TextView
                android:id="@+id/tr_1_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical" />

            <TextView
                android:id="@+id/tr_1_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/tb_tr_1_3" />

            <TextView
                android:id="@+id/tr_1_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/table_padding" >

            <TextView
                android:id="@+id/tr_2_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/tb_tr_2_1" />

            <TextView
                android:id="@+id/tr_2_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical" />

            <TextView
                android:id="@+id/tr_2_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/tb_tr_2_3" />

            <TextView
                android:id="@+id/tr_2_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/table_padding" >

            <TextView
                android:id="@+id/tr_3_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/tb_tr_3_1" />

            <TextView
                android:id="@+id/tr_3_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical" />

            <TextView
                android:id="@+id/tr_3_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/tb_tr_3_3" />

            <TextView
                android:id="@+id/tr_3_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/table_padding" >

            <TextView
                android:id="@+id/tr_4_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/tb_tr_4_1" />

            <TextView
                android:id="@+id/tr_4_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical" />

            <TextView
                android:id="@+id/tr_4_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/tb_tr_4_3" />

            <TextView
                android:id="@+id/tr_4_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/table_padding" >

            <TextView
                android:id="@+id/tr_5_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/tb_tr_5_1" />

            <TextView
                android:id="@+id/tr_5_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical" />

            <TextView
                android:id="@+id/tr_5_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/tb_tr_5_3" />

            <TextView
                android:id="@+id/tr_5_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/table_padding" >

            <TextView
                android:id="@+id/tr_6_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/tb_tr_6_1" />

            <TextView
                android:id="@+id/tr_6_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical" />
        </TableRow>
    </TableLayout>

    <TableLayout
        android:id="@+id/tl_prod_add"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:shrinkColumns="0,2" >

        <TableRow
            android:id="@+id/tableRow2_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/table_padding" >

            <TextView
                android:id="@+id/tr2_1_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/tb_tr_1_1" />

            <EditText
                android:id="@+id/tr2_1_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10" 
                android:gravity="center_vertical"
                android:inputType="number">

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/tr2_1_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/tb_tr_1_3" />
            
            <EditText
                android:id="@+id/tr2_1_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10" 
                android:gravity="center_vertical"
                android:inputType="number"/>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/table_padding" >

            <TextView
                android:id="@+id/tr2_2_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/tb_tr_2_1" />
            
            <EditText
                android:id="@+id/tr2_2_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10" 
                android:gravity="center_vertical"
                android:inputType="number"/>

            <TextView
                android:id="@+id/tr2_2_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/tb_tr_2_3" />
            
            <EditText
                android:id="@+id/tr2_2_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10" 
                android:gravity="center_vertical"
                android:inputType="number"/>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/table_padding" >

            <TextView
                android:id="@+id/tr2_3_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/tb_tr_3_1" />
            
            <EditText
                android:id="@+id/tr2_3_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10" 
                android:gravity="center_vertical"
                android:inputType="number"/>

            <TextView
                android:id="@+id/tr2_3_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/tb_tr_3_3" />

            <EditText
                android:id="@+id/tr2_3_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10" 
                android:gravity="center_vertical"
                android:inputType="number"/>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/table_padding" >

            <TextView
                android:id="@+id/tr2_4_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/tb_tr_4_1" />

            <TextView
                android:id="@+id/tr2_4_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical" />

            <TextView
                android:id="@+id/tr2_4_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/tb_tr_4_3" />

            <TextView
                android:id="@+id/tr2_4_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/table_padding" >

            <TextView
                android:id="@+id/tr2_5_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/tb_tr_5_1" />

            <TextView
                android:id="@+id/tr2_5_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical" />

            <TextView
                android:id="@+id/tr2_5_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/tb_tr_5_3" />

            <TextView
                android:id="@+id/tr2_5_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/table_padding" >

            <TextView
                android:id="@+id/tr2_6_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/tb_tr_6_1" />

            <TextView
                android:id="@+id/tr2_6_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical" />
        </TableRow>
    </TableLayout>

</LinearLayout>